feat: Corrección Issues